// 指定的当前proto语法的版本，有2和3
syntax = "proto3";
//option go_package = "path;name"; ath 表示生成的go文件的存放地址，会自动生成目录的
// name 表示生成的go文件所属的包名
option go_package = "../models";
// 指定等会文件生成出来的package
//    TODO: --go_out=./ 就行了
// protoc --go_out=./ auth.proto
// 使用any类型，需要导入这个
// import "google/protobuf/any.proto";

package models;
//只能驼峰写法，禁止蛇形写法
message info{
  int64 expireUnix = 1;
  int64 loginTime = 2;
  string token = 3;
  string userAgent = 4;
  string clientIp = 5;
}

message auth {

  string email = 1;

  repeated info infos = 2;
}